replace gui installer w/ command line version
- support the eclipse gui installer layout
- improve osx support